src/styles/navbar.sass
.navbar
    position: fixed
    top: 0
    left: 0
    width: 100%
    padding: 0.75rem 2rem
    background: rgba($mainBlack, 0.8)
    transition: $quickTransition
    z-index: 3

    .back-to-top
        position: fixed
        right: 2rem
        bottom: 1rem
        visibility: visible
        font-size: 4rem
        opacity: 0.7
        transition: $quickTransition

        &.top
            visibility: hidden

        &:hover
            opacity: 1

    &.top
        transition: $quickTransition
        background: rgba($mainBlack, 0)

        .back-to-top
            visibility: hidden

        .nav-header img
            filter: drop-shadow(2px 5px 2px rgba($mainBlack, 0.8))

    @media screen and ( max-width: 768px )
        .back-to-top
            font-size: 3rem
            right: 1 rem
            bottom: 1 rem

.nav-header
    display: flex
    justify-content: space-between

    img
        display: block
        height: 50px
        filter: none
        // transition: $mainTransition

.nav-btn
    background: transparent
    border: none
    cursor: pointer
    outline: none

.nav-icon
    font-size: 1.5rem
    color: $primaryColor

.nav-links
    height: 0
    overflow: hidden
    transition: $mainTransition
    list-style-type: none

    a
        display: flex
        text-decoration: none
        padding: 1rem 0
        color: $mainWhite
        transition: $mainTransition
        text-align: center
        align-items: center
        justify-content: center
        font-size: 1rem
        font-weight: 600

    a:hover
        color: $primaryColor

    svg
        font-size: 1.4rem
        margin-right: 0.5rem

.show-nav
    height: 170px

@media screen and ( min-width: 768px )
    .nav-btn
        display: none

    .nav-center
        max-width: 1170px
        margin: 0 auto
        display: flex
        align-items: center

    .nav-links
        height: auto
        display: flex
        margin-left: 4rem

        a
            margin: 0 2rem
            padding: 0.5rem 0

